-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.3
-
None
-
-
223deb596 (12.0)
Ctrl + R in integrated terminal with Git Bash shell or linux bash shell triggers global Qt shortcut instead of triggering reverse search of the terminal
Same goes for other shortcuts (as an example all nano's shortcuts)
VS Code handles this case with conditions on shortcuts (it even allows to have the same shortcuts for different things based on current focus scope as an example)
For Gerrit Dashboard: QTCREATORBUG-29876 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
517604,8 | Shortcut to enable/disable shortcuts routing to terminal | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |