Shortcut to enable/disable shortcuts routing to terminal

Fixes: QTCREATORBUG-29876
Change-Id: I8b04c09ce1de7dab968499773179f663c1c6fe7d
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>