src/plugins/terminal/terminalconstants.h
@@ -15,5 +15,6 @@ constexpr char CLEARSELECTION[] = "Terminal.ClearSelection";
 constexpr char MOVECURSORWORDLEFT[] = "Terminal.MoveCursorWordLeft";
 constexpr char MOVECURSORWORDRIGHT[] = "Terminal.MoveCursorWordRight";
 constexpr char CLEAR_TERMINAL[] = "Terminal.ClearTerminal";
+constexpr char TOGGLE_KEYBOARD_LOCK[] = "Terminal.ToggleKeyboardLock";
 
 } // namespace Terminal::Constants
